<resources>
    <string name="app_name">devnexus-android-2</string>

    <!-- Drawer -->
    <string name="all_presentations">All Presentations</string>
    <string name="my_schedule">My Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="scan_badge">Scan Badge</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>

    <!-- Sponsors -->
    <string name="error_processing_request">An error occurred while processing your request</string>
    <string name="try_again">Try again</string>

    <!-- About -->
    <string name="about_description"><![CDATA[Create by <a href=\'http://twitter.com/summerspittman\'>Summers Pittman</a> and <a href=\'http://twitter.com/passos\'>Daniel Passos</a>]]></string>
    
    <!-- Endpoints -->
    <string name="talks_json">"https://devnexus.com/api/schedule.json"</string>
    <string name="speakers_url">"https://devnexus.com/api/speakers.json"</string>
    <string name="speaker_avatar_url">https://devnexus.com/s/speakers/%1$s.jpg</string>
    <string name="sponsors_url">"https://devnexus.com/api/sponsors.json"</string>
    <string name="sponsor_logo">https://devnexus.com/s/sponsors/%1$s.jpg</string>
</resources>
